add script to menu bar when click menu item and connect strat page when ligoutin adminDashboard.html html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -84,80 +84,88 @@
                         </div>
                     </div>
                 </div>
-                <div class="row bg-light ms-2 mt-3" style="height: 470px; width: 214px; border-radius: 12px">
+                <div class="row bg-white ms-2 mt-3" style="height: 470px; width: 214px; border-radius: 12px">
                     <div class="col-12 mt-3">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuHome" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-house-chimney"></i> Home </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuCars" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-car-side"></i> Cars </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuUsers" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-users"></i> Users </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuDrivers" style="border-radius: 15px">
                                 <label style="width: max-content"><i class="fa-solid fa-users-rectangle"></i> Driver </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuRents" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-file"></i> Rents </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuPayments" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-money-bill-transfer"></i> Payments </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
-                                <label style="width: max-content"> <i class="fa-solid fa-message"></i> Request </label>
+                            <div class="col-10 fs-5" id="menuRequests" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-message"></i> Requests </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuIncomes" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-coins"></i> Incomes </label>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 ">
                         <div class="row justify-content-center">
-                            <div class="col-10 fs-5" style="border-radius: 15px">
+                            <div class="col-10 fs-5" id="menuMaintains" style="border-radius: 15px">
                                 <label style="width: max-content"> <i class="fa-solid fa-screwdriver-wrench"></i> Maintains </label>
                             </div>
                         </div>
                     </div>
+                    <div class="col-12 ">
+                        <div class="row justify-content-center">
+                            <div class="col-10 fs-5" style="border-radius: 15px">
+                                <label style="width: max-content"> <i class="fa-solid fa-right-from-bracket" style="color: darkred"></i><a href="../index.html" style="text-decoration: none;color: darkred"> LogOut </a> </label>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-
             </div>
         </div>
         <div class="col-10 bg-danger"></div>
     </div>
 </main>
 
+
 <script src="../assests/js/bootstrap.min.js"></script>
 <script src="../assests/JQuery/jquery-3.6.1.min.js"></script>
+<script src="../controllers/adminDashboard.js"></script>
+
 </body>
 </html>
