--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/signUp.html
@@ -83,14 +83,12 @@
                     </form>
                     <label class="ms-2 mt-3" style="font-family: 'Convergence', sans-serif;">Already have an
                         account?</label>
-                    <a class="navbar-brand fw-bold" href="../index.html">LogIn</a>
+                    <a class="navbar-brand fw-bold" href="logIn.html">LogIn</a>
                 </div>
             </div>
         </div>
-
         <div class="col-4" id="loginImage"></div>
     </section>
-
 </main>
 
 <script src="../assests/js/bootstrap.min.js"></script>
