design home in adminDashboard.html html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -158,7 +158,90 @@
                 </div>
             </div>
         </div>
-        <div class="col-10 bg-danger"></div>
+        <div class="col-10">
+            <div class="row" style="height: 654px;">
+                <div class="row" style="height: 30px">
+                    <div class="col-12 ms-2">
+                        <label class="mt-1 fs-4" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Home </label>
+                    </div>
+                </div>
+                <div class="row" style="height: 590px">
+                    <div class="col-12 container text-center" style="height: 325px">
+                        <div class="row justify-content-center g-2 g-lg-3">
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Rentals </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfRents" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Available Cars </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfAvailableCars" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Rented Cars </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfRentedCars" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Users </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfUsers" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Available Drivers </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfAvailableDrivers" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                            <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
+                                <div class="col-12">
+                                    <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Cars in Maintains </label>
+                                </div>
+                                <div class="col-12 mt-3">
+                                    <label class="mt-1 fs-1" id="lblNoOfMaintainCars" style="width: max-content"> 00 </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-12" style="height: 265px">
+                        <div class="col-12">
+                            <label class="mt-1 fs-4" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-file"></i> Today Rents </label>
+                        </div>
+                        <div class="col-12 ms-3" style="height: 214px">
+                            <table class="table table-secondary mt-3">
+                                <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">RentID</th>
+                                    <th scope="col">Date</th>
+                                    <th scope="col">UserID</th>
+                                    <th scope="col">UserName</th>
+                                    <th scope="col">Car Registration No</th>
+                                    <th scope="col">PickUp date</th>
+                                    <th scope="col">Return Date</th>
+                                </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
